--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>TinyURL Clone</h1>
+        <h1>Url Shortener</h1>
         <form id="shortenForm">
             <input type="url" id="longUrlInput" placeholder="Enter a long URL" required>
             <button type="submit">Shorten</button>
